--- a/site-pizza_lider/wp-content/themes/pizza_lider/about.html
+++ b/site-pizza_lider/wp-content/themes/pizza_lider/about.html
@@ -813,7 +813,9 @@
 
 
 				</div>	   <!-- End container -->										
-			</footer>	<!-- END FOOTER-4 -->
+			</footer>
+
+			<!-- END FOOTER-4 -->
 
 
 
