--- a/site-pizza_lider/wp-content/themes/pizza_lider/gallery.html
+++ b/site-pizza_lider/wp-content/themes/pizza_lider/gallery.html
@@ -756,7 +756,8 @@
 									</ul>
 															
 								</div>
-							</div>	<!-- END FOOTER IMAGES -->
+							</div>
+							<!-- END FOOTER IMAGES -->
 
 
 						</div> <!-- END FOOTER CONTENT -->
